# py2gds

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: .env  pythonapp.yml
py2gds/: algorithm.py  collection.py  connection.py  dsl.py  exceptions.py  projection.py  queries.py  query.py  rank.py  utils.py
py2gds/algorithms/: rank.py  rank_configuration.py
tests/: conftest.py  github.env  test_dsl.py  test_projection.py  test_queries.py  test_rank.py
