[tool.poetry]
name = "py2gds"
version = "0.1.1"
description = "Library to build Neo4j queries with special attention on Graph Data Science library calls."
authors = ["Pablo Cabezas <pabcabsal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
neo4j = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
12factor-configclasses = "^0.3.0"
python-dotenv = "^0.13.0"
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
